--- a/.config/evolution/calendar/views/current_view-.xml
+++ b/.config/evolution/calendar/views/current_view-.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<GalViewCurrentView current_view="Work_Week_View" current_view_type="work_week_view"/>
+<GalViewCurrentView current_view="Month_View" current_view_type="month_view"/>
